application-1/wit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
name: wit-deployment
  labels: 
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: wit
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: wit-1
    app.kubernetes.io/version: 1.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/part-of: application-1
      app.kubernetes.io/name: wit
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: wit-1
      app.kubernetes.io/version: 1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: application-1
        app.kubernetes.io/name: wit
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: wit-1
        app.kubernetes.io/version: 1.0
    spec:
      containers:
        - name: wit
          image: nginx:1.7.9
          ports:
            - containerPort: 80
